@@ -73,6 +73,11 @@ all containers under the default Docker containers path:
       - "*"
 ----
 
+===== `cri.force`
+
+Force CRI format parsing. This disables automatic format detection, use it when you know format is CRI
+to gain some performance. This is false by default.
+
 include::../inputs/input-common-harvester-options.asciidoc[]
 
 include::../inputs/input-common-file-options.asciidoc[]
